<resources>
    <!-- APP -->
    <string name="app_name">CatracaWeb</string>
    <string name="app_name_ok">CatracaWeb</string>
    <string name="app_splash">Controle de Acesso</string>
    <string name="info_copyright">©-CatracaWeb - 2017</string>
    <!-- Inputs -->
    <string name="hint_nome">Informe seu Nome</string>
    <string name="hint_email_cad">E-Mail para acesso</string>
    <string name="hint_email_reset">E-Mail cadastrado</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_pass">Senha</string>
    <string name="hint_cpf_cnpj">Informe-o aqui</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_date_fis">Data de Nascimento</string>
    <string name="hint_date_jur">Fundação da Empresa</string>
    <string name="hint_date_reset">Data Cadastrada*</string>
    <!-- Botões -->
    <string name="btn_access">Acessar</string>
    <string name="btn_cad">Cadastrar</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_reset_pass">Receber nova senha</string>
    <string name="btn_update_data">Atualizar dados</string>
    <string name="btn_client">Já é cliente?</string>
    <string name="btn_login">Fazer Login</string>
    <string name="btn_forgot">Esqueceu a senha?</string>
    <string name="btn_new_client">Não é cliente?</string>
    <string name="btn_question_pass">Qual data?</string>
    <!-- Botões Menu-->
    <string name="btn_account">Minha Conta</string>
    <string name="btn_maps">Maps</string>
    <string name="btn_about">Sobre</string>
    <string name="btn_logout">Sair</string>
    <!-- Botões DashBoard-->
    <string name="btn_car">Cadastrar Veículo</string>
    <string name="btn_new_visits">Gerar Visita</string>
    <string name="btn_visits_actives">Visitas Ativas</string>
    <string name="btn_user_config">Configurações do Usuário</string>
    <!-- Avisos -->
    <string name="info_new_user_01">Novo por aqui?\n Obrigado!</string>
    <string name="info_new_user_02">Obrigado!</string>
    <string name="info_new_user_03">Para utilizar nossos serviços é necessário realizar um pequeno cadastro</string>
    <string name="info_new_user_cad">Necessário para recuperação da senha no futuro!</string>
    <string name="info_reset_pass_01">Esqueceu a senha?\n Sem problema</string>
    <string name="info_reset_pass_02">Sem problema</string>
    <string name="info_reset_pass_03">* Uma nova senha será enviada para seu E-Mail</string>
    <string name="info_reset_pass_04">Informar:\n Data de Nascimento ou \n Fundação da Empresa.</string>
    <string name="info_reset_pass_05">*Nascimento ou Fundação da Empresa.</string>
    <string name="info_internet">Por favor, verifique sua conexao com a internet.</string>
    <string name="info_success">Informações Atualizadas</string>
    <!-- Avisos Threads -->
    <string name="info_login">Efetuando Login...</string>
    <string name="info_update">Atualizando dados...</string>

    <!-- Validações de Formulário-->
    <string name="err_msg_required">Preencha este campo!</string>
    <string name="err_msg_nome">Informe um Nome</string>
    <string name="err_msg_email">Informe um E-Mail válido</string>
    <string name="err_msg_password">Informe uma senha!</string>
    <string name="err_msg_date">Informe uma data válida!</string>
    <string name="err_msg_cpf">Informe uma CPF válido!</string>
    <string name="err_msg_cnpj">Informe uma CNPJ válido!</string>
    <!-- TABS -->
    <string name="tab_visitors">Visitantes</string>
    <string name="tab_cars">Veículos</string>
    <string name="tab_home">Home</string>
    <!-- Card View -->
    <string name="card_linechart_top">Bem Vindo!</string>
    <string name="card_linechart_bottom">* Mais detalhes nas visitas ativas</string>
    <!-- Telas -->
    <string name="msq_user_data">Meus Dados</string>

    <!-- Fragment Veículos -->
    <string name="hint_search_plate">Pesquisar por placa</string>
    <string name="msq_car_data">Dados do Veículo</string>
    <string name="hint_plate">Informe a placa</string>
    <string name="hint_model">Informe o modelo</string>
    <string name="hint_alter_car_image">Toque na imagem abaixo para alterá-la</string>
    <string name="btn_save_car">Salvar Dados</string>
    <string name="error_wrong_search_plate">Placa do veículo imcompleta</string>

    <string name="image_dialog_title">Selecione uma opção</string>
    <string name="image_get_camera">Tirar foto com a câmera</string>
    <string name="image_get_gallery">Selecionar foto da galeria</string>

    <!-- Fragment Visitantes -->
    <string name="hint_search_cpf">Busca por CPF</string>
    <string name="msq_visitantes">Dados do Visitante</string>
    <string name="hint_visit_nome">Informe o Nome</string>
    <string name="hint_visit_rg">Informe o RG</string>
    <string name="hint_alter_face">Foto do Visitante</string>
    <string name="hint_alter_doc">Foto do Documento</string>
    <string name="btn_save_visitante">Salvar Dados</string>

    <!-- Fragment GerarVisita -->
    <string name="msg_gerar_visita">Gerar Visita</string>
    <string name="msg_motivos">Motivo da Visita</string>
    <string name="msg_responsaveis">Responsável pela Visita</string>
    <string name="dica_gerar_visita">✔ Informe o Responsável.\n✔ Selecione o motivo.\n✔Adicione os visitantes.\n✔Se precisar, os veículos.</string>
    <string name="add_opcao_01">Adicionar Visitante</string>
    <string name="add_opcao_02">Adicionar Veículo</string>

    <!-- About Activity -->
    <string name="activity_avaliacao">Avaliaç1ão</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_classificarAvaliacao">Classificar</string>
    <string name="btn_voltarAvaliacao">Voltar</string>

    <string-array name="types_user">
        <item id="1">CPF</item>
        <item id="2">CNPJ</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_new_visits">newVisitsActivity</string>

</resources>
