<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_myAccount"
        android:icon="@drawable/ic_assignment_ind_white"
        android:title="@string/btn_account"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_myMaps"
        android:icon="@drawable/ic_satellite"
        android:title="@string/btn_maps"
        app:showAsAction="always"/>

    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_info_black"
        android:title="@string/btn_about"
        app:showAsAction="never"/>

    <item android:id="@+id/action_exit"
        android:icon="@drawable/ic_exit_to_app_black"
        android:title="@string/btn_logout"
        app:showAsAction="never"/>
</menu>