<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_selector"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:fillViewport="true"
    tools:context="com.example.rafael.catraca_web_app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name_ok"
                android:textColor="@color/colorWhite"
                android:textSize="24dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/allerregular"
                />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_toRightOf="@+id/txt"
                android:layout_marginLeft="-30dp"
                android:src="@drawable/catraca_01"

                />
        </RelativeLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            >

            <EditText
                android:id="@+id/input_login"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:drawableStart="@drawable/ic_mail_outline_black"
                android:drawablePadding="5dp"
                android:fontFamily="@font/allerregular"
                />

            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"

            >

            <EditText
                android:id="@+id/input_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_vpn_key_black"
                android:drawablePadding="5dp"
                android:fontFamily="@font/allerregular"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_access"
            android:background="@color/color_btn"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerregular"

            />
        <TextView
            android:id="@+id/forgotPass"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:textSize="10pt"
            android:text="@string/btn_forgot"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/allerregular"
            />

        <TextView
            android:id="@+id/newClient"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:textSize="10pt"
            android:text="@string/btn_new_client"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/allerregular"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="7pt"
                android:text="@string/info_copyright"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/allerregular"

                />

        </RelativeLayout>

    </LinearLayout>



</ScrollView>
