<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_selector"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:fillViewport="true"
    tools:context="com.example.rafael.catraca_web_app.ResetPassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/face_woman"
                />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img"
                android:fontFamily="monospace"
                android:text="@string/info_reset_pass_01"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                />


        </RelativeLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="240dp"
            android:layout_height="70dp"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/colorNPrimaryDark"
            >

            <TextView
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/info_reset_pass_03"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/allerregular"
                />
        </android.support.v7.widget.CardView>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_reset"
                android:drawableStart="@drawable/ic_mail_outline_black"
                android:drawablePadding="5dp"
                android:fontFamily="@font/allerregular"

                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_date"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date_reset"
                android:drawablePadding="5dp"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_date_range_black"
                android:fontFamily="@font/allerregular"

                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_reset_pass"
            android:background="@color/color_btn"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerregular"

            />

        <TextView
            android:id="@+id/questionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="6pt"
            android:text="@string/info_reset_pass_05"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/allerregular"

            />

        <TextView
            android:id="@+id/isClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="10pt"
            android:text="@string/btn_login"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/allerregular"

            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="8pt"
                android:text="@string/info_copyright"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/allerregular"
                />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
