<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_selector"
    android:padding="10dp"
    android:fillViewport="true"
    tools:context="com.example.rafael.catraca_web_app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/face_man"
                />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img"
                android:fontFamily="monospace"
                android:text="@string/info_new_user_01"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                />


        </RelativeLayout>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="240dp"
            android:layout_height="100dp"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="@color/colorNPrimaryDark"
            >

            <TextView
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:text="@string/info_new_user_03"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                />
        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_nome"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_cad"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_date"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorBlack"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            >

            <EditText
                android:id="@+id/input_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass_cad"

                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_access"
            android:background="@color/color_btn"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/isClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textSize="10pt"
            android:text="@string/btn_client"
            android:textColor="@color/colorWhite"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="8pt"
                android:text="@string/info_copyright"
                android:textColor="@color/colorWhite"

                />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
